[IMP] mail: small design adjustments in Discuss app
- discuss app sidebar:
  - smaller category name
  - smaller channel items
  - less spacing in-between items and categories
  - "start a meeting" is aligned with header
- discuss app topbar:
  - smaller avatar (not taking whole height)
  - thread actions are more compact
- discuss content
  - slightly darker background like kanban views bg
  - shadow around to give some visual depth
- composer:
  - composer send button is plane icon
  - more visible hover effect in dark theme
- messaging menu:
  - date is time (today) or date rather than relative time
  - header is smaller
- chat window:
  - conversation name has caret-down to hint at it being clickable
  - dropdown actions are displayed on side of chat window rather than
    on the conversation.
- file viewer:
  - same text and bg color for toolbar and topbar
- message:
  - less spacing between date and "on Document" in inbox.

task-3978351

--- a/addons/mail/static/src/core/common/core.scss
+++ b/addons/mail/static/src/core/common/core.scss
@@ -1,3 +1,7 @@
+.o-mail-discussSidebarBgColor {
+    background-color: mix($white, $o-gray-100);
+}
+
 .o-bg-black {
     background-color: rgba(0, 0, 0, var(--bg-opacity, 1));
 }
