--- a/addons/mail/static/src/core/common/message.scss
+++ b/addons/mail/static/src/core/common/message.scss
@@ -51,7 +51,7 @@
     }
 
     button:hover, .focus {
-        background-color: $o-gray-200 !important;
+        background-color: mix($o-gray-100, $o-gray-200) !important;
     }
 }
 
