--- a/addons/mail/static/src/core/web/discuss_patch.scss
+++ b/addons/mail/static/src/core/web/discuss_patch.scss
@@ -1,3 +1,8 @@
 .o-mail-Discuss-mobileLoading {
     font-size: 70px;
 }
+
+.o-mail-Discuss-headerStartMeeting {
+    width: $o-mail-Discuss-inspector;
+    z-index: 2;
+}
