--- a/addons/mail/static/src/core/web/messaging_menu.scss
+++ b/addons/mail/static/src/core/web/messaging_menu.scss
@@ -4,8 +4,18 @@
     max-height: Min(calc(#{ $o-dropdown-max-height } - 5px), 630px); // -5px for borders
 }
 
-.o-mail-MessagingMenu-navbar button {
-    &.o-active, &:hover {
-        background-color: mix($o-gray-100, $o-gray-200);
+.o-mail-MessagingMenu-header {
+    box-shadow: 0px 7px 7px -7px rgba(50, 50, 50, 0.15);
+}
+
+.o-mail-MessagingMenu-navbar, .o-mail-MessagingMenu-header {
+    button {
+        &.o-active {
+            background-color: mix($o-gray-100, $o-gray-200);
+        }
     }
+}
+
+.o-mail-MessagingMenu-navbar button:hover {
+    background-color: mix($o-gray-100, $o-gray-200);
 }
