--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -35,7 +35,7 @@
 .o-mail-Composer-actions button {
     opacity: 75%;
     &:hover {
-        background-color: rgba(0, 0, 0, 0.1);
+        background-color: $gray-200;
         opacity: 100%;
     }
 }
@@ -66,4 +66,8 @@
     padding-top: 10px;
     padding-bottom: 10px;
     line-height: 1.42857143 !important; // so that input is rounded to 20px = 14px (base font) * 1.42857143 (line-height)
+}
+
+.o-mail-Composer-compactContainer {
+    box-shadow: 0px -3px 25px 3px rgba(50, 50, 50, 0.1);
 }
