--- a/addons/mail/static/src/core/common/core.dark.scss
+++ b/addons/mail/static/src/core/common/core.dark.scss
@@ -1,3 +1,7 @@
+.o-mail-discussSidebarBgColor {
+    background-color: mix($o-gray-100, $o-gray-200);
+}
+
 a.o_mail_redirect, a.o_channel_redirect {
     @include button-variant(rgba($primary, .2), rgba($primary, .2), lighten($link-color, 5%), rgba($primary, .3), rgba($primary, .3), lighten($link-color, 10%));
 }
