[IMP] website_{forum|slides_survey}: merge multiple profile tabs into one
We merge the profile tabs questions, answers and activities into one
(activities).
And within this new tab, the users can now filter their questions and answers
without leaving the profile page instead of being redirected to the forum.

Technical notes:
- the boostrap tabs (questions, answers and activities) are controlled by a
dropdown. But as the bootstrap dropdown has no label by default, we use the
interaction to set it.
- we use post for the search form to keep the URL parameters (ex.: forum_id).

Task-3893028

--- a/addons/website_slides_survey/views/website_profile.xml
+++ b/addons/website_slides_survey/views/website_profile.xml
@@ -21,12 +21,13 @@
             <div t-if="show_certification_tab" role="tabpanel" t-attf-class="tab-pane #{ 'show active' if active_tab == 'certification' else '' }" id="profile_tab_content_certification">
                 <h5 class="d-flex justify-content-between align-items-end border-bottom pb-1">
                     Certification Attempts
-                    <form method="get">
+                    <form method="post">
                         <div class="input-group" role="search">
-                            <input type="text" class="form-control" name="certification_search" t-att-value="certification_search_terms or ''" placeholder="Search Attempts..."/>
+                            <input type="text" class="form-control oe_search_box border-0 bg-light" name="certification_search" t-att-value="certification_search_terms or ''" placeholder="Search Attempts..."/>
+                            <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
                             <div class="input-group-append">
-                                <button type="submit" class="btn btn-primary" aria-label="Search" title="Search">
-                                    <i class="fa fa-search"/>
+                                <button type="submit" class="btn btn-light" aria-label="Search" title="Search">
+                                    <i class="oi oi-search"/>
                                 </button>
                             </div>
                         </div>
