[IMP] web,*: kanban: new "can_open" attribute
This commit is part of a task aiming at simplifying kanban archs.
Specifically, it tackles the `oe_kanban_global_click` and
`oe_kanban_global_click_edit` classnames. They allowed to specify
that the kanban cards where "clickable" to open the corresponding
record in form view (pressing "Enter" with a card focused worked as
well).

The majority of kanban cards (~180/200) are clickable. For that
reason, we decided to change the default: kanban cards now allow to
open the record in form view, except if stated otherwise. To
disable this behavior, the new attribute `can_open` can be set to
a falsy value, on the root node of the arch.

From now on, we can remove all occurrences of the classnames above.
This will be done iteratively in the next weeks/months, in the
process of simplifying kanban archs.

The ~20 views for which the behavior has to be disabled have been
adapted.

(Part of) task `3650117`

1

Part-of: odoo/odoo#167751
Related: odoo/enterprise#63714
Related: odoo/documentation#9604
Signed-off-by: Géry Debongnie <ged@odoo.com>

--- a/addons/web/static/src/views/kanban/kanban_controller.scss
+++ b/addons/web/static/src/views/kanban/kanban_controller.scss
@@ -377,31 +377,8 @@
             }
         }
 
-        @mixin global-click-selector {
-            &.oe_kanban_global_click,
-            &.oe_kanban_global_click_edit,
-            .oe_kanban_global_click,
-            .oe_kanban_global_click_edit {
-                @content;
-            }
-        }
-
-        @include global-click-selector {
-            cursor: pointer;
-        }
-
-        &:focus-visible,
-        &:focus-within {
+        &:focus-visible, &:focus-within {
             z-index: 2;
-
-            @include global-click-selector {
-                outline: thin solid mix($o-main-link-color, map-get($grays, "300"));
-                outline-offset: -1px;
-
-                &:after {
-                    transform: translateX($border-width);
-                }
-            }
         }
 
         .o_attachment_image > img {
