--- a/odoo/addons/base/views/ir_module_views.xml
+++ b/odoo/addons/base/views/ir_module_views.xml
@@ -150,7 +150,7 @@
             <field name="name">Apps Kanban</field>
             <field name="model">ir.module.module</field>
             <field name="arch" type="xml">
-                <kanban create="false" class="o_modules_kanban">
+                <kanban create="false" can_open="0" class="o_modules_kanban">
                   <field name="icon"/>
                   <field name="icon_flag"/>
                   <field name="to_buy"/>
