--- a/addons/account/views/account_journal_dashboard_view.xml
+++ b/addons/account/views/account_journal_dashboard_view.xml
@@ -3,7 +3,7 @@
         <field name="name">account.journal.dashboard.kanban</field>
         <field name="model">account.journal</field>
         <field name="arch" type="xml">
-            <kanban create="false" class="o_kanban_dashboard o_account_kanban" js_class="account_dashboard_kanban">
+            <kanban create="false" can_open="0" class="o_kanban_dashboard o_account_kanban" js_class="account_dashboard_kanban">
                 <field name="id"/>
                 <field name="name"/>
                 <field name="type"/>
