--- a/addons/maintenance/views/maintenance_views.xml
+++ b/addons/maintenance/views/maintenance_views.xml
@@ -865,7 +865,7 @@
         <field name="name">maintenance.team.kanban</field>
         <field name="model">maintenance.team</field>
         <field name="arch" type="xml">
-            <kanban class="o_kanban_dashboard o_maintenance_team_kanban" create="0">
+            <kanban class="o_kanban_dashboard o_maintenance_team_kanban" create="0" can_open="0">
                 <field name="name"/>
                 <field name="color"/>
                 <field name="todo_request_ids"/>
