--- a/addons/product/views/product_document_views.xml
+++ b/addons/product/views/product_document_views.xml
@@ -45,7 +45,7 @@
         <field name="name">product.document.kanban</field>
         <field name="model">product.document</field>
         <field name="arch" type="xml">
-            <kanban js_class="product_documents_kanban">
+            <kanban js_class="product_documents_kanban" can_open="0">
                 <field name="sequence" widget="handle"/>
                 <field name="ir_attachment_id"/>
                 <field name="mimetype"/>
