--- a/addons/stock/views/stock_picking_type_views.xml
+++ b/addons/stock/views/stock_picking_type_views.xml
@@ -174,7 +174,7 @@
         <field name="name">stock.picking.type.kanban</field>
         <field name="model">stock.picking.type</field>
         <field name="arch" type="xml">
-            <kanban class="o_kanban_dashboard o_stock_kanban o_emphasize_colors" create="0" group_create="false">
+            <kanban class="o_kanban_dashboard o_stock_kanban o_emphasize_colors" create="0" group_create="false" can_open="0">
                 <field name="color"/>
                 <field name="code" readonly="1"/>
                 <field name="count_picking_ready"/>
