--- a/addons/website/views/website_views.xml
+++ b/addons/website/views/website_views.xml
@@ -234,7 +234,7 @@
             <field name="name">Themes Kanban</field>
             <field name="model">ir.module.module</field>
             <field name="arch" type="xml">
-                <kanban create="false" default_order="state,sequence,name" js_class="theme_preview_kanban">
+                <kanban create="false" can_open="0" default_order="state,sequence,name" js_class="theme_preview_kanban">
                     <field name="icon"/>
                     <field name="summary"/>
                     <field name="name"/>
