[IMP] pos_restaurant: improve ux
In `pos_restaurant` the user can use the option `Edit Plan` to enter
into editing mode.

In this commit we remove that option from the dropdown menu, as well as
the editing mode concept and introduce more intuitive ways of handling
the different usecases.

To edit tables, the user can now simply right click on a table, which
will reveal a dropdown menu on the side of the clicked table. From this
menu, the user will be able to perform all the actions that would have
been done from the edit panel in the top bar, such as changing the
table's name, color, shape, etc.

Editing a floors attributes ( color, name, etc ) is done by
right clicking on the specific floor's label in the floor selector.

In tablet mode, instead of right click, the user will longpress.

Editing a floor's name can be done by double clicking it's label.

This commit removes the ability to have multiple tables selected at the
same time. This was a feature that was not intuitive and not very
usefull.

One of the biggest changes that this commit introduces is the new way of
handling merged tables.
Currently, the user has to go through a tedious process of linking the
tables, the graphical result of which is the fact that the linked table
will have a certain pattern on it, marking it's relation with the parent
table. This behavior is not intuitive.
After this commit, the user will be able to just drag any table onto
another and the 2 tables will be linked. Moving the parent table will
move the child as well, so as to graphically strengthen the idea of
linking. Unlinking can be easily done by simply moving the child table
to a different location. This allows the linking of any number of
tables. Unlinking can also be done by right clicking on any of the
linked tables and clicking the button labeled "Unlink" from the
dropdown. This will unlink the tables and automatically rearrange them in
their original positions.

Task 3984162

--- a/addons/pos_restaurant/static/src/app/floor_screen/floor_screen.scss
+++ b/addons/pos_restaurant/static/src/app/floor_screen/floor_screen.scss
@@ -9,7 +9,6 @@
         box-shadow: 0px 2px 3px rgba(0,0,0,0.2);
         /* See o-grab-cursor mixin */
         cursor: url(/web/static/img/openhand.cur), grab;
-        transition: 150ms;
         z-index: 100;
         &:hover {
             transform: scale(1.5);
@@ -18,8 +17,8 @@
     &.floor-grid {
         background-image:
             linear-gradient(0, #D3D3D3 14%, transparent 14%),
-            linear-gradient(90deg, transparent 90%, #D3D3D3 70%);
-        background-size: 10px 10px;
+            linear-gradient(90deg, transparent 90%, #D3D3D3 70%) !important;
+        background-size: 10px 10px !important;
     }
 }
 .floor-picture {
@@ -44,4 +43,12 @@
         opacity: 0;
         cursor: pointer;
     }
+}
+.rotate_right {
+    transform: rotate(10deg);
+    transition: transform 0.6s;
+}
+.rotate_left {
+    transform: rotate(-10deg);
+    transition: transform 0.6s;
 }
