--- a/addons/web/static/src/views/kanban/kanban_controller.scss
+++ b/addons/web/static/src/views/kanban/kanban_controller.scss
@@ -89,6 +89,19 @@
             height: 100%;
         }
 
+        // Records colours
+        @for $size from 2 through length($o-colors) {
+            // Note: the first color is not defined as it is the 'no color' for kanban
+            &.o_kanban_color_#{$size - 1}::after {
+                $-color: nth($o-colors, $size);
+
+                @include o-position-absolute(0, auto, 0, -$border-width);
+                border-left: $border-width solid rgba($-color, 0.5);
+                border-right: ($border-width * 2) solid $-color;
+                content: "";
+            }
+        }
+
         // ------- Kanban Record, v11 Layout -------
         // Records colours
         > div::after {
@@ -625,7 +638,7 @@
         }
     }
 
-    // Records colours
+    // Records colours (legacy)
     @include o-kanban-record-color;
 
     .oe_kanban_color_help {
@@ -673,11 +686,6 @@
 .modal .o_kanban_cover_container .o_kanban_cover_image {
     height: 120px;
     width: 120px;
-}
-
-// Kanban Record - Dropdown colorpicker
-.oe_kanban_colorpicker {
-    @include o-kanban-colorpicker;
 }
 
 .o-dropdown--kanban-config-menu {
