[IMP] account, l10n_*: dashboard style (and an unexpected fix)
- Reduce the space between the left buttons and summary on the right of dashboard kanban cards
- fix typo
- Add link to unreconciled payments (moved from account_reports)
- remove unused file (account_dashboard_setup_bar.xml)
- remove New Transaction links/buttons
- add a bank account in demo data if there isn't one and link it to the bank journal
- hide setup bank if there is a bank account on the journal
- link btn style: color
- Simplify kanban summary text: X ~~Invoices~~ to Validate, Y ~~Bills~~ to Pay
- Simplify buttons: New ~~Invoice/Bill/Entry~~
- Remove hover tooltips on sample data
- FIX: when calling `create_document_from_attachment` in JS, the help markup is lost. Ensure that it is still markup.

journal form:
- display the statement source field in invoicing enterprise

To reproduce the no content helper issue:
- drag and drop a file to the bank journal
- on redirection to the bank recon kanban, search for "somethingarbitrary"
- see HTML text as the helper

why change things in l10n_cl?

Chile demo data was forcing the delay of writing fields in demo data records, causing an error in the creation of a demo bank account. By making changes to the demo data, we can improve the demo data load process.

closes odoo/odoo#169120

X-original-commit: e3e1b31a1310d4c25b40eeebbfbddf16d31011e2
Related: odoo/enterprise#64479
Signed-off-by: Claire Bretton (clbr) <clbr@odoo.com>
Signed-off-by: Habib Ayob (ayh) <ayh@odoo.com>

--- a/addons/account/static/src/components/bills_upload/bills_upload.scss
+++ b/addons/account/static/src/components/bills_upload/bills_upload.scss
@@ -52,9 +52,9 @@
 }
 
 .o_widget_account_file_uploader {
-  .btn-primary.oe_kanban_action_button {
+  .oe_kanban_action_button {
     a {
-      color: inherit;
+      color: var(--btn-color);
     }
   }
 }
