--- a/addons/sale_loyalty/views/sale_order_views.xml
+++ b/addons/sale_loyalty/views/sale_order_views.xml
@@ -14,7 +14,7 @@
                         class="btn btn-secondary"/>
                 <button name="action_open_reward_wizard"
                         type="object"
-                        string="Promotions"
+                        string="Reward"
                         help="Update current promotional lines and select new rewards if applicable."
                         class="btn btn-secondary"/>
             </button>
