[REF] product,*: simplify product.product/template kanban archs
*hr_expense,stock,website_sale

(Part of) task `3650117`

Part-of: odoo/odoo#167751
Related: odoo/enterprise#63714
Related: odoo/documentation#9604
Signed-off-by: Géry Debongnie <ged@odoo.com>

--- a/addons/hr_expense/views/hr_expense_views.xml
+++ b/addons/hr_expense/views/hr_expense_views.xml
@@ -622,10 +622,10 @@
             <field name="mode">primary</field>
             <field name="model">product.product</field>
             <field name="arch" type="xml">
-                <xpath expr="//div[@name='product_lst_price']" position="after">
-                    <div name="product_standard_price" class="mt-1">
+                <xpath expr="//main" position="inside">
+                    <span>
                         Cost: <field name="standard_price"/>
-                    </div>
+                    </span>
                 </xpath>
             </field>
         </record>
