--- a/addons/product/views/product_template_views.xml
+++ b/addons/product/views/product_template_views.xml
@@ -90,51 +90,33 @@
         <field name="model">product.template</field>
         <field name="arch" type="xml">
             <kanban sample="1">
-                <field name="id"/>
-                <field name="product_variant_count"/>
                 <field name="currency_id"/>
                 <field name="activity_state"/>
                 <field name="categ_id"/>
-                <field name="image_128" invisible="1"/>
                 <progressbar field="activity_state" colors='{"planned": "success", "today": "warning", "overdue": "danger"}'/>
                 <templates>
-                    <t t-name="kanban-box">
-                        <div class="d-flex oe_kanban_card oe_kanban_global_click">
-                            <div class="oe_kanban_details">
-                                <div class="o_kanban_record_top mb-0">
-                                    <field
-                                        name="is_favorite"
-                                        widget="boolean_favorite"
-                                        nolabel="1"
-                                        class="me-1"
-                                    />
-                                    <div class="o_kanban_record_headings">
-                                        <strong class="o_kanban_record_title">
-                                            <field name="name"/>
-                                        </strong>
-                                    </div>
+                    <t t-name="kanban-card" class="row g-0">
+                        <main class="col-10 pe-2">
+                            <div class="mb-1">
+                                <div class="d-flex mb-0 h5">
+                                    <field class="me-1" name="is_favorite" widget="boolean_favorite" nolabel="1"/>
+                                    <field name="name"/>
                                 </div>
-                                <t t-if="record.default_code.value">[<field name="default_code"/>]</t>
-                                <div t-if="record.product_variant_count.value &gt; 1" groups="product.group_product_variant">
-                                    <strong>
-                                        <t t-esc="record.product_variant_count.value"/> Variants
-                                    </strong>
-                                </div>
-                                <div name="product_lst_price" class="mt-1">
-                                    Price: <field name="list_price" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}"></field>
-                                </div>
-                                <div>
-                                    <field name="product_properties" widget="properties"/>
-                                </div>
+                                <span t-if="record.default_code.value">
+                                    [<field name="default_code"/>]
+                                </span>
+                                <strong t-if="record.product_variant_count.value &gt; 1">
+                                    <field name="product_variant_count"/> Variants
+                                </strong>
                             </div>
-                            <div class="o_kanban_image me-1">
-                                <img
-                                    t-att-src="kanban_image('product.template', 'image_128', record.id.raw_value)"
-                                    alt="Product"
-                                    class="o_image_64_contain"
-                                    invisible="not image_128"/>
-                            </div>
-                        </div>
+                            <span>
+                                Price: <field name="list_price" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}"/>
+                            </span>
+                            <field name="product_properties" widget="properties"/>
+                        </main>
+                        <aside class="col-2 p-0">
+                            <field name="image_128" widget="image" alt="Product"/>
+                        </aside>
                     </t>
                 </templates>
             </kanban>
