[FIX] account: remove placeholder on tax legal notes field
Removes a useless placeholder (because it's a repetition of the field name) for the field tax_legal_note that was added in this commit https://github.com/odoo/odoo/commit/4cfb19c6eb9603959eb459c22795c2585d8547a6

closes odoo/odoo#169092

Task-id: 3873054
X-original-commit: aa5ab4ac95efa7ab57dc353d7cee1a8b483f1c41
Signed-off-by: Florian Gilbert (flg) <flg@odoo.com>

--- a/addons/account/views/account_tax_views.xml
+++ b/addons/account/views/account_tax_views.xml
@@ -188,7 +188,7 @@
                                     <field name="analytic" invisible="amount_type == 'group'" groups="analytic.group_analytic_accounting" />
                                     <field name="company_id" options="{'no_create': True}" groups="base.group_multi_company"/>
                                     <field name="country_id" required="True"/>
-                                    <field name="invoice_legal_notes" placeholder="Legal Notes ..."/>
+                                    <field name="invoice_legal_notes"/>
                                 </group>
                                 <group name="advanced_booleans">
                                     <field name="price_include" invisible="amount_type == 'group'"/>
